--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
           div.className = 'min-w-[88px] px-3 py-2 border border-slate-200 rounded-xl bg-white text-center shadow-sm cursor-pointer hover:shadow transition-shadow focus:outline-none focus:ring-2 focus:ring-sky-400';
           div.setAttribute('data-word', word);
           div.innerHTML = `
-            <div class="word text-base sm:text-lg font-bold leading-tight">${word}</div>
-            <div class="text-[11px] sm:text-xs text-gray-600 mt-0.5">${mode === 'pinyin' ? pinyin(word, { toneType: 'mark' }) : (zhuyinCache[word] || '查詢中...')}</div>
+            <div class="word text-xl sm:text-2xl font-bold leading-tight">${word}</div>
+            <div class="text-sm sm:text-base text-gray-600 mt-0.5">${mode === 'pinyin' ? pinyin(word, { toneType: 'mark' }) : (zhuyinCache[word] || '查詢中...')}</div>
           `;
           optionZone.appendChild(div);
         });
@@ -297,12 +297,12 @@
                 setCorrectCount(c => c + 1);
                 if (currentIndex + 1 === questions.length) {
                   setFinished(true);
-                  new Audio('https://www.soundjay.com/human/sounds/applause-8.mp3').play();
+                  new Audio('sounds/correct.mp3').play();
                 } else {
                   setCurrentIndex(i => i + 1);
                 }
               } else if (order.length === correct.length) {
-                new Audio('https://www.myinstants.com/media/sounds/error.mp3').play();
+                new Audio('sounds/wrong.mp3').play();
                 setErrorCount(c => c + 1);
                 const wrongTiles = Array.from(answerZone.children);
                 wrongTiles.forEach(tile => optionZone.appendChild(tile));
