--- a/index.html
+++ b/index.html
@@ -486,7 +486,16 @@
                   React.createElement('div', {
                     id: 'answer-zone',
                     className: 'min-h-[96px] flex flex-wrap gap-2 border border-slate-200 p-2 bg-white rounded-lg'
-                  })
+                  }),
+                   React.createElement('p', {
+  className: 'text-sm text-gray-600 mt-2 whitespace-pre-line'
+},
+  '【🌸あそびかた】\n1. ',
+  React.createElement('strong', null, 'まずは単語を聞いてみよう：'),
+  'タップすると音声が流れるよ。\n2. ',
+  React.createElement('strong', null, '文を並べて声に出して読もう：'),
+  '正しい順番になるように単語をドラッグして答えゾーンに並べよう。正解したら次の問題に進めるけど、間違えたら並べ直してください。'
+)
                 )
               )
             )
