--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       早上: 'zǎoshang', 
       晚上: 'wǎnshang',
       们: 'men',
+      骨头: 'gǔtou',
     };
 
     const CUSTOM_PINYIN_HANT = {
@@ -59,6 +60,7 @@
       哥哥: 'gēge',
       叔叔: 'shūshu', // ← 繁體
       們: 'men',
+      骨頭: 'gǔtou',
     };
 
 
