--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       晚上: 'wǎnshang',
       们: 'men',
       骨头: 'gǔtou',
+      不爱: 'búài',
     };
 
     const CUSTOM_PINYIN_HANT = {
@@ -61,6 +62,7 @@
       叔叔: 'shūshu', // ← 繁體
       們: 'men',
       骨頭: 'gǔtou',
+      不愛: 'búài',
     };
 
 
