--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       们: 'men',
       骨头: 'gǔtou',
       不爱: 'búài',
+      什么: 'shénme',
+      个: 'ge',
     };
 
     const CUSTOM_PINYIN_HANT = {
@@ -63,6 +65,8 @@
       們: 'men',
       骨頭: 'gǔtou',
       不愛: 'búài',
+      什麼: 'shénme',
+      個: 'ge',
     };
 
 
