--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       不爱: 'búài',
       什么: 'shénme',
       个: 'ge',
-      有没有: 'yǒuméiyǒu',
+      没有: 'méiyǒu',
     };
 
     const CUSTOM_PINYIN_HANT = {
@@ -68,7 +68,7 @@
       不愛: 'búài',
       什麼: 'shénme',
       個: 'ge',
-      有沒有: 'yǒuméiyǒu',
+      沒有: 'méiyǒu',
     };
 
 
