--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       什么: 'shénme',
       个: 'ge',
       没有: 'méiyǒu',
+      都: 'dōu',
     };
 
     const CUSTOM_PINYIN_HANT = {
@@ -69,6 +70,7 @@
       什麼: 'shénme',
       個: 'ge',
       沒有: 'méiyǒu',
+      都: 'dōu',
     };
 
 
