--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       个: 'ge',
       没有: 'méiyǒu',
       都: 'dōu',
+      都市: 'dūshì',
     };
 
     const CUSTOM_PINYIN_HANT = {
@@ -71,6 +72,7 @@
       個: 'ge',
       沒有: 'méiyǒu',
       都: 'dōu',
+      都市: 'dūshì',
     };
 
 
